--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
+	<audio autoplay>
+			<source src = "lagu.mp3" type="audio/mp3"/>
+</audio>
 	<div class="wrapper">
 			<nav class="navbar">
 				<ul>
