--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<audio autoplay>
-			<source src = "lagu.mp3" type="audio/mp3"/>
-</audio>
+<audio src="lagu.mp3" autoplay></audio>
 	<div class="wrapper">
 			<nav class="navbar">
 				<ul>
