--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-<audio src="lagu.mp3" autoplay></audio>
+<audio src="https://a.uguu.se/Uebrwyii.mp3" autoplay></audio>
 	<div class="wrapper">
 			<nav class="navbar">
 				<ul>
-					<li><a class="active" href="#">Home</a></li>
-					<li><a href="#">About</a></li>
+					<li><a class="active" href="https://bolaxd.github.io/ball-amvweb/">Home</a></li>
+					<li><a href="https://github.com/bolaxd">Github</a></li>
 					<li><a href="#">Contact</a></li>
 				</ul>
 			</nav>
